fixed perfect-scrollbar

--- a/src/assets/sass/material-dashboard/_sidebar-and-main-panel.scss
+++ b/src/assets/sass/material-dashboard/_sidebar-and-main-panel.scss
@@ -457,23 +457,6 @@
     -webkit-overflow-scrolling: touch;
 }
 
-// windows os settings for perfect scrollbar off
-.sidebar .sidebar-wrapper,
-.main-panel{
-    .perfect-scrollbar-on &,
-    &{
-        overflow: hidden;
-    }
-}
-
-// regular settings for perfect scrollbar off
-.perfect-scrollbar-off{
-    .sidebar .sidebar-wrapper,
-    .main-panel{
-        overflow: auto;
-    }
-}
-
 .visible-on-sidebar-regular{
     display: inline-block !important;
 }
